--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 
     <!-- Services Section -->
     <div id="services-section">
-
         <!-- First Column: Title & Description -->
         <div id="services-header">
             <h2>Services</h2>
@@ -78,9 +77,11 @@
             <div id="service-innosphere-1">
                 <div id="service-innosphere-content-1">
                     <h2>INNOSPHERE</h2>
-                    <p>Innosphere offers BPO services, specializing in customer service, data management, and
+                    <p>
+                        Innosphere offers BPO services, specializing in customer service, data management, and
                         back-office support, using advanced technology to improve efficiency and reduce costs for
-                        clients across industries.</p>
+                        clients across industries.
+                    </p>
                     <button>Contact us</button>
                 </div>
             </div>
@@ -89,9 +90,11 @@
             <div id="service-innosphere-2">
                 <div id="service-innosphere-content-2">
                     <h2>INNOSPHERE</h2>
-                    <p>Innosphere offers BPO services, specializing in customer service, data management, and
+                    <p>
+                        Innosphere offers BPO services, specializing in customer service, data management, and
                         back-office support, using advanced technology to improve efficiency and reduce costs for
-                        clients across industries.</p>
+                        clients across industries.
+                    </p>
                     <button>Contact us</button>
                 </div>
             </div>
@@ -100,9 +103,11 @@
             <div id="service-innosphere-3">
                 <div id="service-innosphere-content-3">
                     <h2>INNOSPHERE</h2>
-                    <p>Innosphere offers BPO services, specializing in customer service, data management, and
+                    <p>
+                        Innosphere offers BPO services, specializing in customer service, data management, and
                         back-office support, using advanced technology to improve efficiency and reduce costs for
-                        clients across industries.</p>
+                        clients across industries.
+                    </p>
                     <button>Contact us</button>
                 </div>
             </div>
