--- a/index.html
+++ b/index.html
@@ -59,19 +59,21 @@
         </div>
         <!-- Navbar Ends -->
 
-    <!-- Home Section -->
-    <div id="home-section"
-        style="background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0) 100%), url('assets/images/homebg.png') center/cover no-repeat;">
-        <div id="home-text-content">
-            <h1>INNOSPHERE</h1>
-            <h2>SOFTWARE SOLUTIONS INC.</h2>
-            <p>
-                Innosphere offers BPO services, specializing in customer service, data management, and back-office
-                support, using advanced technology to improve efficiency and reduce costs for clients across industries.
-            </p>
-            <div id="home-buttons">
-                <button id="home-apply">Apply</button>
-                <button id="home-know-more">Know more</button>
+    <!-- Home Section Starts -->
+    <div class="home-section" style="background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)), 
+    url('/assets/images/homebg.png') center/cover no-repeat;">
+        <div class="hero-main">
+            <div class="hero-container" style="padding-bottom: 100px;">
+                <h2 class="hero-title h2">INNOSPHERE</h2>
+                <h3 class="hero-subtitle h5">SOFTWARE SOLUTIONS INC.</h3>
+                <p class="hero-description">
+                    Innosphere offers BPO services, specializing in customer service, data management,
+                    and <br> back-office support, using advanced technology to improve efficiency and reduce costs for <br> clients across industries.
+                </p>
+                <div class="button-container">
+                    <a class="btn hero-button" href="#">About us</a>
+                    <a id="btn-light" class="btn-light hero-button" href="#">Know more</a>
+                </div>
             </div>
         </div>
     </div>
