--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/services.css">
@@ -20,60 +19,44 @@
 <body
     style="margin: 0; padding: 0; font-family: Arial, sans-serif; scroll-behavior: smooth; overflow-x: hidden; width: 100vw;">
 
-    <!-- Navbar Starts -->
-        <div class="nav-main">
-            <div id="logo-container" class="logo-container">
-                <img src="/assets/images/logo.png" alt="Innosphere logo">
-            </div>
-            <ul class="menu-container">
-                <li><a href="#">Home</a></li>
-                <li><a href="#services-section">Services</a></li>
-                <li><a href="#industries-section">Industries</a></li>
-                <li><a href="#resources-section">Resources</a></li>
-                <li><a href="#career-section">Career</a></li>
-                <li><a href="#about-section">About</a></li>
-            </ul>
-            <div class="btn-container">
-                <a class="btn" href="">Contact Us</a>
-            </div>
-        </div>
-        
-        <!-- Navbar mobile -->
-        <div class="nav-mobile" id="nav-mobile">
-            <div class="container">
-                <div id="logo-container-1" class="logo-container-1">
-                    <img src="/assets/images/logo-light.png" alt="Innosphere logo">
-                </div>
-                <ul class="menu-container">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#services-section">Services</a></li>
-                    <li><a href="#industries-section">Industries</a></li>
-                    <li><a href="#resources-section">Resources</a></li>
-                    <li><a href="#career-section">Career</a></li>
-                    <li><a href="#about-section">About</a></li>
-                </ul>
-            </div>
-            <div class="btn-container">
-                <a class="btn-mobile" href="#">Contact Us</a>
-            </div>
-        </div>
-        <!-- Navbar Ends -->
+    <!-- Navbar -->
+    <div class="navbar">
 
-    <!-- Home Section Starts -->
-    <div class="home-section" style="background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)), 
-    url('/assets/images/homebg.png') center/cover no-repeat;">
-        <div class="hero-main">
-            <div class="hero-container" style="padding-bottom: 100px;">
-                <h2 class="hero-title h2">INNOSPHERE</h2>
-                <h3 class="hero-subtitle h5">SOFTWARE SOLUTIONS INC.</h3>
-                <p class="hero-description">
-                    Innosphere offers BPO services, specializing in customer service, data management,
-                    and <br> back-office support, using advanced technology to improve efficiency and reduce costs for <br> clients across industries.
-                </p>
-                <div class="button-container">
-                    <a class="btn hero-button" href="#">About us</a>
-                    <a id="btn-light" class="btn-light hero-button" href="#">Know more</a>
-                </div>
+        <!-- Logo on the left -->
+        <div class="navbar-logo">
+            <img src="assets/images/logo.png" alt="Innosphere logo">
+        </div>
+
+        <!-- Centered menu -->
+        <ul class="navbar-menu">
+            <li><a href="#home-section">Home</a></li>
+            <li><a href="#services-section">Services</a></li>
+            <li><a href="#industries-section">Industries</a></li>
+            <li><a href="#resources-section">Resources</a></li>
+            <li><a href="#career-section">Career</a></li>
+            <li><a href="#about-section">About</a></li>
+        </ul>
+
+        <!-- Button on the right -->
+        <div class="navbar-button">
+            <a href="#">Contact Us</a>
+        </div>
+
+    </div>
+
+    <!-- Home Section -->
+    <div id="home-section"
+        style="background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0) 100%), url('assets/images/homebg.png') center/cover no-repeat;">
+        <div id="home-text-content">
+            <h1>INNOSPHERE</h1>
+            <h2>SOFTWARE SOLUTIONS INC.</h2>
+            <p>
+                Innosphere offers BPO services, specializing in customer service, data management, and back-office
+                support, using advanced technology to improve efficiency and reduce costs for clients across industries.
+            </p>
+            <div id="home-buttons">
+                <button id="home-apply">Apply</button>
+                <button id="home-know-more">Know more</button>
             </div>
         </div>
     </div>
@@ -341,7 +324,5 @@
         });
     });
 </script>
-
-<script src="assets/js/script.js"></script>
 
 </html>
