About us update mobile view done

--- a/index.html
+++ b/index.html
@@ -222,8 +222,10 @@
         <div id="about-first-column">
             <!-- Text Div (Positioned Absolutely) -->
             <div id="about-text">
-                <h1>ABOUT <br>US</h1>
+                <h1>ABOUT</h1>
+                <h1>US</h1>
             </div>
+            
 
             <!-- Larger Image -->
             <img id="about-image1" src="assets/images/AboutUs-image1.png" alt="Team Image">
