--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 
 </body>
-
+<script src="assets/js/script.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const links = document.querySelectorAll("a[href^='#']");
