Services and home mobile view

--- a/index.html
+++ b/index.html
@@ -201,20 +201,7 @@
     </div>
     <!-- Resources Section Ends -->
 
-    <!-- Career Starts -->
-    <div id="career-section"
-        style="width: 100vw; height: 100vh; background: url('assets/images/careerspic.jpg') no-repeat center center/cover; position: relative; display: flex; align-items: center; justify-content: flex-start;">
-        <div id="career-overlay"></div>
-        <div id="career-text-content">
-            <h1>Careers</h1>
-            <p>"Join our team and explore exciting career opportunities to grow professionally and make an impact."</p>
-            <div id="career-buttons">
-                <button id="career-apply">Apply</button>
-                <button id="career-know-more">Know more</button>
-            </div>
-        </div>
-    </div>
-    <!-- Career Ends -->
+    
 
     <!-- About Us Section -->
     <div id="about-section">
@@ -325,6 +312,6 @@
     });
 </script>
 
-<script src="assets/js/script.js"></script>
+<!-- <script src="assets/js/script.js"></script> -->
 
 </html>
